fixed spacing

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -22,14 +22,14 @@ background:#c40c1d;
 #banner_nav li{
 font-size:15px;
 float:left;
-width:110px;
+width:80px;
 display:block;
-margin-left: 15px;
+margin-left: 0px;
 margin-bottom:15px;
-padding: 0px 10px 0px 10px ;
+padding: 0px 0px 0px 0px ;
 /*text-shadow:1px 1px 1px;*/
 border-style:solid;
-border-width:0px 1px 0px 0px;
+border-width:0px 0px 0px 0px;
 color:white;
 text-align:center;
 }
